css/base.css
body {
    text-align: center;
    background-color: gainsboro;
    margin: 0;
    padding: 0;
}

.mc-main-page {
    width: 100%;
    max-width: 1110px;
    min-width: 395px;
    height: auto;
    border: solid #ccc 1px;
    display: inline-block;
    margin: 0;
    background-color: #efefef;
    padding-bottom: 10px;
}

.mc-title {
    width: 100%;
    height: 60px;
    border: solid black 0.7px;
    background-image: url("../image/header.png");
    background-size: 100% auto;
}

.mc-title-name {
    text-align: center;
    font-size: 20px;
    line-height: 60px;
    color: gainsboro;
}

.mc-icon-img {
    width: 100%;
    height: 80px;
    border-bottom: dashed 1px purple;
    text-align: left;
    position: relative;
    background-color: antiquewhite;
}

.mc-pulao-img {
    width: 60px;
    height: 60px;
    display: inline-block;
    border-radius: 5px;
    border: black solid 0.7px;
    margin: 10px 0 0 3%;
}

.mc-pulao-word {
    width: 75%;
    height: 70px;
    border-radius: 3px;
    border: black solid 0.7px;
    background-color: seashell;
    color: #3e3e3e;
    display: inline-block;
    text-indent: 1em;
    font-size: 14px;
    position: absolute;
    top: 5px;
    left: 20%;
    padding-left: 4px;
}

.mc-save-box, .mc-box-evaluate {
    width: 98%;
    height: auto;
    margin: 5px 0 5px 1%;
    border-radius: 6px;
    border: black solid 1px;
    background-color: white;
    text-align: left;
    background-image: url("../image/bg01.png");
    background-size: 100% auto;
}

.mc-save-box-center {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: flex-start;
    align-content: flex-start;
}

.mc-author {
    width: 100%;
    background-color: whitesmoke;
    text-align: left;
    padding-left: 1em;
    font-size: 12px;
    color: #3e3e3e;
    margin-bottom: 5px;
}

.mc-role-rank {
    width: 18px;
    height: 18px;
    line-height: 16px;
    border-radius: 50%;
    color: white;
    font-size: 13px;
    font-weight: bold;
    border: #3e3e3e 1px solid;
    display: inline-block;
    position: absolute;
    top: -1px;
    left: -1px;
}

.mc-role-ming {
    width: 16px;
    height: 16px;
    line-height: 16px;
    color: white;
    font-size: 12px;
    font-weight: bold;
    display: inline-block;
    position: absolute;
    top: 60px;
    right: 0;
    background-color: #3e3e3e;
}

.rankbg01 {
    background-color: orangered;
}

.rankbg02 {
    background-color: #fca131;
}

.rankbg03 {
    background-color: #72bd05;
}

.mc-dpan {
    width: 98%;
    height: auto;
    background-color: whitesmoke;
    border: solid #3e3e3e 1px;
    border-radius: 5px;
    margin: 2px 1%;
}

.mc-btn-box {
    width: 100%;
    height: auto;
    background-color: white;
}

.mc-btn-box-title {
    width: 20%;
    height: 31px;
    line-height: 30px;
    border: black solid 1px;
    border-radius: 5px 0 0 5px;
    color: white;
    font-size: 14px;
    margin-left: 1%;
    background-image: linear-gradient(to right, #F44336, #7C4DFF);
    display: inline-block;
}

.mc-btn-box-value {
    width: 25%;
    line-height: 25px;
    border: #3e3e3e solid 1px;
    border-radius: 0 5px 5px 0;
    color: #3e3e3e;
    font-size: 14px;
    margin-right: 2%;
    background-color: #fff9f9;
    display: inline-block;
}

.mc-btn-box-import, .mc-btn-box-import2 {
    width: 22%;
    height: 25px;
    line-height: 24px;
    border: black solid 1px;
    border-radius: 5px;
    color: white;
    font-size: 14px;
    margin: 5px 1%;
    background-image: linear-gradient(to right, #0066FF, #7C4DFF);
    display: inline-block;
    cursor: pointer;
}

.modal-body-set {
    text-align: left;
    text-indent: 1em;
    font-size: 14px;
    padding: 10px;
}

.cr-add-btn {
    width: 22%;
    height: 25px;
    line-height: 24px;
    border: black solid 1px;
    border-radius: 5px;
    color: white;
    font-size: 14px;
    margin: 5px 1%;
    background-image: linear-gradient(to right, #00BCD4, #94cc20);
    display: inline-block;
    cursor: pointer;
}

.cr-eval-btn {
    width: 63%;
    height: 30px;
    line-height: 28px;
    border: black solid 1px;
    border-radius: 5px;
    color: white;
    font-size: 15px;
    margin: 5px 1% 5px 0;
    display: inline-block;
    background-image: linear-gradient(to right, #FF9800, #FF6600);
}

.cr-eval-center {
    width: 30%;
    height: 30px;
    line-height: 28px;
    border: black solid 1px;
    border-radius: 5px;
    color: white;
    font-size: 14px;
    margin: 5px 0 5px 1%;
    display: inline-block;
    background: linear-gradient(to right, rgba(255, 255, 255, 0.15) 0%, rgba(0, 0, 0, 0.15) 100%), radial-gradient(at top center, rgba(255, 255, 255, 0.40) 0%, rgba(0, 0, 0, 0.40) 120%) #989898;
    background-blend-mode: multiply, multiply;
    cursor: pointer;
}

.mc-role, .mc-role-cel {
    width: 72px;
    height: 120px;
    border-radius: 3px;
    border: black solid 1px;
    margin: 4px 0 5px 5px;
    display: inline-block;
    text-align: center;
    box-shadow: 2px 3px 3px #3e3e3e;
    position: relative;
    cursor: pointer;
}

.mc-role-delete {
    width: 14px;
    height: 14px;
    line-height: 12px;
    font-size: 14px;
    border-radius: 7px;
    border: solid #aaa 1px;
    color: #bbb;
    display: inline-block;
    position: absolute;
    bottom: 5px;
    right: 2px;
}

.mc-role-score {
    width: 72px;
    height: 16px;
    background-color: rgba(0, 0, 0, 0.6);
    color: white;
    font-size: 12px;
    margin-top: 60px;
}

.mc-role-level {
    width: 40px;
    height: 12px;
    background-color: rgba(0, 0, 0, 0.6);
    color: white;
    font-size: 11px;
    margin: 0;
    position: absolute;
    right: 0;
    bottom: 15px;
}

.mcr-defult {
    background-image: linear-gradient(to bottom, #0066FF, #9900FF);
    color: white;
    font-size: 14px;
}

.mcr-cl, .mcr-changli {
    background-image: url("../image/characters/changli.png");
    background-size: 100% auto;
}
/* ... */

